<resources>
    <string name="app_name">CookingAid</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_basket">Basket</string>
    <string name="title_activity_storage">Storage</string>

    <string name="recipes_resource" translatable="false">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/</string>

    <!-- mocks-->
    <string name="mock_price"> 2$</string>
    <string name="mock_time">01:00</string>
    <string name="mock_quantity">2 kg</string>
    <string name="mock_lists_quantity">(2)</string>
    <string name="mock_category">Category</string>
    <string name="mock_details">details</string>

    <!-- content descriptions-->
    <string name="cd_image">image</string>
    <string name="cd_expand">expand</string>
    <string name="cd_recount">recount ingredients quantity</string>
    <string name="cd_basket">put ingredients to basket</string>
    <string name="cd_step">step of instruction</string>
    <string name="cd_pallet">choose color for category</string>
    <string name="cd_select_all">select all items</string>
    <string name="cd_timer_start">start or stop timer</string>
    <string name="cd_add_product">add product</string>

    <!-- recipes types-->
    <string name="recipe_dessert">dessert</string>
    <string name="recipe_soup">soup</string>
    <string name="recipe_salad">salad</string>
    <string name="recipe_pizza">pizza</string>
    <string name="recipe_drink">drink</string>

    <!-- names-->
    <string name="ingredient">Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price, $</string>
    <string name="calories_in_100">Kcal in 100g</string>
    <string name="expiration">Expiry days</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>

    <!--measures-->
    <string name="kg_measure">K</string>
    <string name="g_measure">G</string>
    <string name="oz_measure">OZ</string>
    <string name="cup_measure">CUP</string>
    <string name="unit_measure">UNIT</string>
    <string name="tsp_measure">TSP</string>
    <string name="tblsp_measure">TBLSP</string>

    <!-- messages-->
    <string name="msg_no_recipes">Sorry, no recipes</string>
    <string name="msg_no_internet">Sorry, no internet</string>
    <string name="msg_no_storage_items">You haven`t added any product yet</string>
    <string name="msg_product_has_expired">Expiration date has expired</string>
    <string name="msg_days_to_expire">Days to expire: %1$d</string>
    <string name="msg_bought_date">Bought: %1$s</string>
    <string name="msg_fill_field">Please, fill the field</string>
    <string name="msg_cannot_be_null">Value cannot be 0</string>
    <string name="msg_ingredient_field_is_empty">Please, fill `INGREDIENT` filed</string>
    <string name="msg_quantity_field_is_empty">Please, fill `QUANTITY` filed</string>
    <string name="msg_sent_to_basket_permission">Send all ingredients for recipe %1$s to shopping list?</string>
    <string name="msg_how_many_servings">How many people are you going to cook for?</string>


    <string name="total_price">Total: %1$s $</string>
    <string name="just_price">Price: %1$s $</string>
    <string name="total_weight">Weight: %1$s kg</string>
    <string name="calories_recipe_item">%1$.1f kkal</string>
    <string name="price_recipe_item">%1$.3f $</string>
    <string name="step_desc">Step %1$d: %2$s</string>
    <string name="persons">%1$d pers.</string>

    <string name="format_of_date">dd.MM.yy.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="unit_quantity">Unit quantity</string>
    <string name="price_example">Example: 2</string>
    <string name="expiration_example">Example: 10</string>
    <string name="calories_example">Example: 220 </string>
    <string name="badNumber">error</string>
    <string name="empty_widget_list">Empty list</string>
    <string name="shopping_list">Shopping list:</string>
    <string name="add_widget">Add widget</string>
    <string name="send">Send</string>
    <string name="number_of_persons">Number of persons</string>
    <string name="one_unit_equals">1 unit =</string>

</resources>
