<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.baikaleg.v3.cookingaid.ui.addeditproduct.AddEditProductModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/title"
            style="@style/AppTheme.CommonMargin"
            catalogList="@{model.catalogEntityNames}"
            catalogValue="@={model.productEntity.ingredient}"
            isEditable="@{model.isEditable?true:false}"
            onCatalogEntitySelected="@{model.catalogSelectedListener}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:dropDownHeight="200dp"
            android:enabled="@{model.isEditable?true:false}"
            android:hint="@string/ingredient"
            android:imeOptions="actionDone"
            android:inputType="text|textAutoComplete"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/quantity"
            style="@style/AppTheme.CommonMargin"
            quantityIsSet="@={model.isQuantitySet}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:text="@={`` +model.productEntity.quantity}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/measure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Spinner
            android:id="@+id/measure"
            style="@style/AppTheme.CommonMargin"
            onMeasureSelected="@{model.measureSelectedListener}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/measures"
            app:layout_constraintBottom_toBottomOf="@+id/quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/quantity"
            app:selectedValue="@={model.productEntity.measure}" />

        <TextView
            android:id="@+id/single_unit_txt"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 unit = "
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/single_unit_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/single_unit_field" />

        <EditText
            android:id="@+id/single_unit_field"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number"
            android:text="@={`` +model.productEntity.unitQuantity}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/single_unit_measure"
            app:layout_constraintStart_toEndOf="@+id/single_unit_txt"
            app:layout_constraintTop_toBottomOf="@+id/quantity" />

        <Spinner
            android:id="@+id/single_unit_measure"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/unit_measures"
            app:layout_constraintBottom_toBottomOf="@+id/single_unit_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/single_unit_field"
            app:selectedValue="@={model.productEntity.unitMeasure}" />

        <android.support.constraint.Group
            android:id="@+id/unit_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{model.isUnitMeasure? View.VISIBLE:View.GONE}"
            app:constraint_referenced_ids="single_unit_measure,single_unit_field,single_unit_txt" />

        <View
            android:id="@+id/divider"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBorder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/single_unit_field" />

        <TextView
            android:id="@+id/price_txt"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:inputType="number"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/price_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price_field" />

        <TextView
            android:id="@+id/calories_txt"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_in_100"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/calories_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/calories_field" />

        <TextView
            android:id="@+id/expiration_txt"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/expiration"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/expiration_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/expiration_field" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="price_txt,calories_txt,expiration_txt" />

        <EditText
            android:id="@+id/price_field"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{model.isQuantitySet?true:false}"
            android:hint="@string/price_example"
            android:inputType="numberDecimal"
            android:text="@={`` +model.productEntity.totalPrice}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/calories_field"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/calories_example"
            android:inputType="numberDecimal"
            android:text="@={`` +model.productEntity.calories}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/price_field" />

        <EditText
            android:id="@+id/expiration_field"
            style="@style/AppTheme.CommonMargin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/expiration_example"
            android:inputType="numberDecimal"
            android:text="@={`` +model.productEntity.expiration}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/calories_field" />

        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:onClick="@{()->model.onCancelBtnClicked()}"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_btn"
            app:layout_constraintTop_toBottomOf="@+id/expiration_field" />

        <TextView
            android:id="@+id/save_btn"
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->model.onSaveBtnClicked()}"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expiration_field" />

    </android.support.constraint.ConstraintLayout>
</layout>
